<resources>
    <string name="app_name">Birds Adventure</string>

    <string name="welcome">"Welcome : "</string>
    <string name="txt_home_welcome">    WELCOME TO BIRDS ADVENTURE APP</string>

    <!-- Login & Register -->
    <string name="title_activity_login">Login</string>
    <string name="title_activity_sign_up">Sign Up</string>
    <string name="title_activity_main">Welcome</string>
    <string name="prompt_name">Name</string>
    <string name="prompt_phone">Phone</string>
    <string name="prompt_address">Address</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_old_password">Old Password</string>
    <string name="prompt_new_password">New Password</string>
    <string name="prompt_confirm__new_password">Confirm New Password</string>
    <string name="prompt_confirm_password">Confirm Password</string>
    <string name="prompt_login">Please Login  to \ncontinue.</string>
    <string name="guest">Click here to explore as guest. </string>
    <string name="prompt_sign_up">Not registered? \n Please sign up.</string>
    <string name="action_login">Login</string>
    <string name="action_register">Sign up</string>
    <string name="action_reset">Reset</string>
    <string name="action_save">Save</string>
    <string name="action_guest">Guest</string>
    <string name="invalid_email">Email not valid</string>
    <string name="invalid_password">Password must be >6 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="change_password">Change Password</string>

    <!-- Media -->
    <string name="action_images">Images</string>
    <string name="action_videos">Videos</string>
    <string name="capture_video">Capture Video</string>
    <string name="capture_audio">Capture Audio</string>
    <string name="action_sounds">Sounds</string>

    <!-- Birds -->
    <string name="prompt_bird_name">Search Birds</string>
    <string name="btn_search">Search</string>

    <!-- Settings -->
    <string name="receive_featured_notifications">Receive Featured Birds notifications when in close proximity</string>
    <string name="receive_favorites_notifications">Receive Favorite Birds notifications when in close proximity</string>
    <string name="proximity_radius">Proximity Radius</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="news_fragment">NEWS</string>

    <!-- Birds Profile -->

    <string name="notifications_fragment">Notifications</string>
    <string name="title_activity_bird_profile">BirdProfileActivity</string>
    <string name="tab_text_1">Description</string>
    <string name="tab_text_2">Media</string>
    <string name="tab_text_3">Location</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="birdDescription">    Description</string>
    <string name="birdLocation">    Location</string>
    <string name="birdCity">City</string>
    <string name="birdRegion">Region</string>
    <string name="birdBiome">    Biome</string>
    <string name="birdHabitat">    Habitat</string>
    <string name="birdDiet">    Diet</string>
    <string name="BirdAppearance">    Appearance</string>
    <string name="birdColour">Colour</string>
    <string name="birdHeight">Height</string>
    <string name="birdWeight">Weight</string>
    <string name="birdimages">Pictures</string>
    <string name="birdvideos">Videos</string>
    <string name="birdsounds">Sound Clips</string>
    <string name="prompt_location">Location</string>
    <string name="play_video">Play</string>
    <string name="add_to_favorites">Add To Favorites</string>
    <string name="remove_from_favorites">Remove From Favorites</string>

</resources>
