<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:background="@drawable/darkgradient"
    tools:context=".SignUpActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/bird"/>
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/txtNameSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_name"
            android:textSize="30sp"
            android:inputType="textPersonName"
            android:textColorHint="@color/textcolor1"
            android:textColor="@color/textcolor1"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="40dp"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/txtEmailSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress"
            android:textColorHint="@color/textcolor1"
            android:textColor="@color/textcolor1"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="40dp"/>
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/txtPhoneSignUp"
            android:layout_width="match_parent"
            android:textSize="30sp"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_phone"
            android:imeOptions="actionDone"
            android:inputType="phone"
            android:textColorHint="@color/textcolor1"
            android:textColor="@color/textcolor1"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="40dp"/>
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/txtAddressSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:hint="@string/prompt_address"
            android:imeOptions="actionDone"
            android:inputType="textPostalAddress"
            android:textColorHint="@color/textcolor1"
            android:textColor="@color/textcolor1"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="40dp"/>
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/txtPasswordSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:hint="@string/prompt_password"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:textColorHint="@color/textcolor1"
            android:textColor="@color/textcolor1"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="40dp"/>
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/txtConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:hint="@string/prompt_confirm_password"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:textColorHint="@color/textcolor1"
            android:textColor="@color/textcolor1"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="40dp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSignUp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="38dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="38dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/loginbuttongradient"
            android:enabled="true"
            android:text="@string/action_register"
            android:textSize="20sp" />
    </LinearLayout>

</RelativeLayout>