<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_bg"
    tools:context=".BirdMediaFragment"
    android:orientation="vertical">



   <LinearLayout
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text= "@string/birdimages"
        android:textSize="20sp"
        android:background="@color/txtviewcolor" />

       <ImageView
           android:id="@+id/mediaImage"
           android:layout_width="300dp"
           android:layout_height="250dp"
           android:background="@mipmap/birdimgmedia">

       </ImageView>
  </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text= "@string/birdvideos"
            android:textSize="20sp"
            android:background="@color/txtviewcolor"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
         android:layout_marginTop="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text= "@string/birdsounds"
            android:textSize="20sp"
            android:background="@color/txtviewcolor"
            />
    </LinearLayout>

    </LinearLayout>

