<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/darkgradient"
    android:padding="10dp"
    tools:context=".ChangePasswordFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/txtCurrentPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="40dp"
            android:hint="@string/prompt_old_password"
            android:inputType="textPassword"
            android:selectAllOnFocus="true"
            android:textColorHint="@color/whitish"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="@color/whitish" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/txtNewPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="40dp"
            android:hint="@string/prompt_new_password"
            android:inputType="textPassword"
            android:selectAllOnFocus="true"
            android:textColorHint="@color/whitish"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="@color/whitish" />


        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/txtNewConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="40dp"
            android:hint="@string/prompt_confirm__new_password"
            android:inputType="textPassword"
            android:selectAllOnFocus="true"
            android:textColorHint="@color/whitish"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="@color/whitish"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSavePassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="38dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="38dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/roundedwhite"
            android:enabled="true"
            android:text="@string/action_save"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="@color/btnTxtColor"
            android:textSize="25sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnResetPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="38dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="38dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/roundedwhite"
            android:enabled="true"
            android:text="@string/action_reset"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="@color/btnTxtColor"
            android:textSize="25sp" />
    </LinearLayout>

</RelativeLayout>